<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_discover"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/discover"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_live_stream"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/live_Streams"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/my_account"
        app:showAsAction="ifRoom" />
</menu>