<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:gravity="center"
        android:textAlignment="center"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:elevation="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            app:srcCompat="@drawable/ic_black_48dp" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/streaming_quality"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:paddingLeft="@dimen/spacing_small"
        android:text="@string/video_quality"
        android:textAllCaps="true"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/font_large" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/black_light">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_360_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="true"
                        android:drawableRight="@drawable/radio_right_selector"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/p_360"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_larger" />


                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_720_p"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/radio_right_selector"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/p_720"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_larger" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_audio_only"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/radio_right_selector"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/audio_only"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_larger" />
                </RadioGroup>

            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:paddingLeft="@dimen/spacing_small"
                android:text="@string/content_offline_viewing"
                android:textAllCaps="true"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_large" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/black_light">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_cache_videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:checked="true"
                        android:drawableRight="@drawable/radio_right_selector"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/cache_videos"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_larger" />


                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/radio_dont_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableRight="@drawable/radio_right_selector"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/dont_save"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_larger" />

                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>