<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:gravity="center"
        android:textAlignment="center"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:elevation="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            app:srcCompat="@drawable/ic_black_48dp" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@color/black_light">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/version_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/black_light"
            android:padding="@dimen/spacing_small"
            android:text="@string/version"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_larger" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/black_light"
            android:padding="@dimen/spacing_small"
            android:text="1.0.0"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_larger" />
    </RelativeLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@color/black_light"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/content_copyright"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_larger" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@color/black_light"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/show_terms_conditions"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_larger" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_dark" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/show_privacy_policy"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_larger" />
</LinearLayout>


