<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context="com.beinit.ui.demographic.DemographicActivity">

    <SurfaceView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_huge"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_larger" />

    <android.support.v4.view.ViewPager
        android:id="@+id/demographic_view_pager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/page_indicator_view" />

    <com.rd.PageIndicatorView
        android:id="@+id/page_indicator_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttom_container"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:layout_marginTop="@dimen/spacing_normal"
        app:piv_animationType="none"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_selectedColor="@android:color/white"
        app:piv_unselectedColor="@color/gray_dark"
        attrs:piv_padding="8dp"
        attrs:piv_radius="6dp" />

    <LinearLayout
        android:id="@+id/buttom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray_light"
            android:text="@string/login" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/yellow_light"
            android:text="@string/sign_up" />
    </LinearLayout>

</RelativeLayout>
